--- a/CSS/honey3.css
+++ b/CSS/honey3.css
@@ -4,20 +4,15 @@ body{
 p{
     font-size: 12px;
 }
-hr{
-    width: 90%;
-    height: 1px;
-
-}
-#TopFixed{
-    position: fixed;
+#Header{
     width: 100%;
     border-bottom:20px;
     background: rgb(64,58,68);
+    position: fixed;
+    z-index: 1;
 }
-#TopFixed img{
+#Header img{
     position: absolute;
-
 }
 #Form1{
     width: 270px;
@@ -49,17 +44,19 @@ hr{
     text-decoration: none;
 }
 #Main{
-    width:90%;
+    width:100%;
     margin: 0 auto;
     padding: 63.04px 20px 20px 20px;
-    background:rgb(204,207,203);
+    background:white;
+    position: absolute;
+    z-index: -1;
 }
 .MainSubDiv{
 
 }
 #Left{
     width: 200px;
-    background: white;
+    background: rgb(246,246,248);
     position: absolute;
     font-family: Arial;
     color: rgb(64,58,68);
@@ -76,4 +73,38 @@ hr{
     margin-right: 200px;
     position: relative;
     left: 200px;
+}
+#Social>ul{
+    padding: 0;
+}
+#Social>ul li{
+    display: inline;
+    width: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+#Social>ul li img{
+    width: 30px;
+}
+.Blank{
+    height: 5px;
+    background: white;
+}
+#Menu>ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+}
+#Menu>ul li{
+    font-family: Arial;
+}
+#Menu>ul li img{
+    width: 13px;
+    vertical-align: middle;
+}
+#Menu>ul li a{
+    color: rgb(64,58,68);
+    text-decoration: none;
+    vertical-align: middle;
+    font-size: 12px;
 }
