--- a/CSS/honey3.css
+++ b/CSS/honey3.css
@@ -69,10 +69,12 @@ p{
     border-radius: 10px;
 }
 #Right{
-    background: pink;
-    margin-right: 200px;
+    margin-right: 205px;
+    padding: 10px;
+    color: rgb(64,58,68);
+    background: rgb(246,246,248);
     position: relative;
-    left: 200px;
+    left: 205px;
 }
 #Social>ul{
     padding: 0;
@@ -107,4 +109,8 @@ p{
     text-decoration: none;
     vertical-align: middle;
     font-size: 12px;
+}
+.RightContent{
+    margin: 5px;
+    border-bottom: 1px solid rgb(64,58,68);
 }
